<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBlueActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_location_hanoi"
        android:textSize="30sp"
        android:textColor="@color/colorTextLocationHaNoi"
        android:textStyle="bold"
        android:layout_marginLeft="140sp"
        android:layout_marginTop="30sp"
        android:textAllCaps="true"
    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/tempature"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_temperature_status"
                android:textSize="40sp"
                android:textColor="@color/colorTextTempatureStatus"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
            />
        </LinearLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/sun"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
        />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:foreground="@color/colorTextTemautureBackGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="31/3/2016"
            android:textColor="@color/colorTextTempatureStatus"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/rainny"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <ImageView
            android:src="@drawable/tempature12"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="14dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="1/4/2016"
            android:textColor="@color/colorTextTempatureStatus"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/cloud_sun"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <ImageView
            android:src="@drawable/tempature"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:text="@string/label_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>